getCitiesByStateCodeOnly api added
